Fixed z-index issue with Device Menu

--- a/src/app/core/statusbar/statusbar.component.css
+++ b/src/app/core/statusbar/statusbar.component.css
@@ -44,7 +44,7 @@
     /*border-bottom-right-radius: 25px;*/
     transform: translateY(-100vh);
     transition: 400ms ease-in-out;
-    z-index: 150;
+    z-index: 1100;
     max-height: 85vh;
     overflow-y: auto;
     font-weight: 400;
